# morze-gyakorlo

./: .gitignore  compose.py  do.sh  gencw.sh  main.py  pyproject.toml
