[project]
name = "morze-gyakorlo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pyhamtools>=0.12.0",
    "python-slugify>=8.0.4",
    "tqdm>=4.67.1",
]
